--- a/jstest.html
+++ b/jstest.html
@@ -3,16 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="javascript3.js"></script>
+    <script src="rockpaperscissors.js"></script>
     <title>JavaScript</title>
 </head>
 <body>
     <h1>
         This is a JavaScript page
     </h1>
-    <script>
+    <!--<script>
         // Your JavaScript goes here!
         console.log("Hello, World!")
       </script>
+    -->
 </body>
 </html>
